@@ -47,6 +47,7 @@ public class StandaloneServer {
 
     private final File home;
     private final File base;
+    private final File javaHome;
     private final File java;
     private final File openejbJar;
     private boolean debug;
@@ -73,7 +74,7 @@ public class StandaloneServer {
         openejbJar = readable(file(select(lib, "openejb-core.*.jar")));
         final File javaagentJar = readable(file(select(lib, "openejb-javaagent.*.jar")));
 
-        final File javaHome = readable(dir(exists(new File(System.getProperty("java.home")))));
+        javaHome = readable(dir(exists(new File(System.getProperty("java.home")))));
 
         final boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
 
@@ -81,6 +82,13 @@ public class StandaloneServer {
 
         jvmOpts.add("-XX:+HeapDumpOnOutOfMemoryError");
         jvmOpts.add("-javaagent:" + javaagentJar.getAbsolutePath());
+
+        // the openejb-loader uses the classloader, so we need to open the package
+        final File jmods = Files.path(javaHome, "jmods");
+        if (jmods.isDirectory() && jmods.exists()) {
+            jvmOpts.add("--add-opens");
+            jvmOpts.add("java.base/jdk.internal.loader=ALL-UNNAMED");
+        }
     }
 
     /**
@@ -280,6 +288,17 @@ public class StandaloneServer {
 
             final ProcessBuilder builder = new ProcessBuilder(args);
             builder.redirectErrorStream(true);
+            final Map<String, String> environment = builder.environment();
+            environment.put("JAVA_HOME", javaHome.getAbsolutePath());
+
+            final boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
+            if (isWindows) {
+                environment.put("PATH", "%JAVA_HOME%/bin:%PATH%");
+
+            } else {
+                environment.put("PATH", "$JAVA_HOME/bin:$PATH");
+
+            }
 
             if (verbose) {
                 System.out.println(Join.join("\n", args));
